@@ -25,6 +25,7 @@
 	#1117: Bump nano to 2.2.3 and migrate to Makefile.autotools.in
 	#1123: Bump less to 436 and migrate to Makefile.autotools.in
 	#1129: Bump memstat to 0.8 and migrate to Makefile.package.in
+	#1219: kernel headers not correctly installed into toolchain/staging
 	#1273: BR2_INET_IPV6 does not enable IPv6 in pppd
 	#1303: Add librsync package
 	#1327: mtd-utils compile failure due to lack of --sysroot in CFLAGS
